tests/neg-custom-args/captures/i25971-shadow.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i25971-shadow.scala:10:26 --------------------------------
10 |  val g: IO => IO => IO = f // error
   |                          ^
   |                        Found:    (Test.f : (x: IO) -> (x: IO) -> IO^{x})
   |                        Required: IO^ => IO^ =>² IO^{any}
   |
   |                        Note that capability `x` cannot flow into capture set {any}
   |                        because (x : IO) is not visible from any in value g.
   |
   |                        where:    =>  refers to a root capability in the type of value g
   |                                  =>² refers to a root capability in the type of value g
   |                                  ^   refers to the root capability caps.any
   |                                  any is a root capability classified as SharedCapability in the type of value g
   |
   | longer explanation available when compiling with `-explain`
